* RELEASE 16H
- Allow precision strikes to target tile improvements
- Overhaul implementation of shared visibility for simplicity and correctness
- Update UI after stack bombarding (fixes bombard button not disappearing for multi-move units w/o blitz)
- Fix crash caused by previous fix for incorrect ETAs w/ limited railroad movement

* RELEASE 16G
- Fix two bugs in shared hotseat visibility

* RELEASE 16F
- Prevent game music from being reset during hotseat replay
- Update minimap when showing replay so it doesn't display info for a previous player
- Expand shared hotseat visibility to cover more UI code

* RELEASE 16E
- Option to share visibility among all human players in a hotseat game
- Re-enable main GUI before showing hotseat AI replay

* RELEASE 16B
- Zone of control changes
  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
  - May be lethal
  - May be exerted by air units
  - Show attack animation even when attacker is not at the top of its stack
- Defensive bombard changes
  - May be lethal
  - May be performed by air units
  - Invisible, undetected units may be made immune
  - May be performed multiple times per turn with blitz

* RELEASE 16 PREVIEW 2
- Limit AI artillery units to one escort (w/ offensive artillery AI)
- Separate land & sea retreat rules
- Apply AI naval escort limit to carriers and missile transports
- Make config options more intuitive: anarchy length reduction, minimum city separation, AI naval escort cap

* RELEASE 16 PREVIEW 1
- Barbarian city capture & production (experimental)
- Can use charm flag to control PTW-like artillery targeting
- Option to ignore king flag on defense, so kings aren't always last to defend in a stack
- Harbor/airport city icons indicate unit effects not trade abilities
- Fix incorrect ETAs in go-to mode when railroad movement is limited
- Can limit the number of escorts the AI assigns to its naval transports
- Fix barbarian diagonal bug
- Optimize improvement loops