@@ -416,6 +416,8 @@ repl call, 0x52C39A,	0x5367DC,	0x52C42A,	"Map_get_tile_to_check_visibility",		""
 repl call, 0x52C146,	0x536586,	0x52C1D6,	"Map_get_tile_to_check_visibility",		""
 repl call, 0x52BED0,	0x536310,	0x52BF60,	"Map_get_tile_to_check_visibility",		""
 repl call, 0x5B555E,	0x5C3EBF,	0x5B526E,	"Unit_get_max_moves_after_barricade_attack",	""
+define,	   0x56D2C0,	0x579C40,	0x56D230,	"city_at",					"City * (__cdecl *) (int x, int y)"
+repl call, 0x4A2018,	0x4A8C28,	0x4A20A8,	"city_at_in_find_bombard_defender",		""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
