@@ -310,3 +310,6 @@ share_visibility_in_hoseat = false
 
 allow_precision_strikes_against_tile_improvements = false
 dont_end_units_turn_after_bombarding_barricade = false
+
+; Allows land units to bombard aircraft and naval units in cities
+remove_land_artillery_target_restrictions = false
